--- a/Cds.Folders.Tests/Cds.Folders.Tests.csproj
+++ b/Cds.Folders.Tests/Cds.Folders.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FolderFile_Should.cs" />
     <Compile Include="OSPath_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Folder_Should.cs" />
